backend tests added
