# backend/docs/swagger.json
@@ -9,7 +9,57 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/auth/login": {
+        "/jwt-payload": {
+            "get": {
+                "description": "This is a handler for auth-service only.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get JWT payload",
+                "parameters": [
+                    {
+                        "description": "Token",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal.getJwtPayloadDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "payload": {
+                                    "$ref": "#/definitions/internal.jwtPayload"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/login-remote": {
             "post": {
                 "description": "This is a handler for auth-service only. It returns a token, which should be forwarded to the client.",
                 "consumes": [
@@ -145,6 +195,25 @@
         }
     },
     "definitions": {
+        "internal.getJwtPayloadDto": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal.jwtPayload": {
+            "type": "object",
+            "properties": {
+                "exp": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "internal.loginRemoteDto": {
             "type": "object",
             "properties": {
